--- a/TriviaPLay/MainPage.xaml
+++ b/TriviaPLay/MainPage.xaml
@@ -2,7 +2,24 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TriviaPLay.MainPage">
+   
+    <StackLayout Padding="20" VerticalOptions="Center">
+        <Button Text="START"
+                FontSize="24"
+                HorizontalOptions="Center"
+                Clicked="StartButtonClicked"/>
 
 
+
+
+
+
+
+        <Button Text="OPTION"
+                FontSize="24"
+                HorizontalOptions="Center"
+                Margin="0,20,0,0"
+                Clicked="Button_Clicked" />
+    </StackLayout>
 
 </ContentPage>
