--- a/TriviaPLay/StartMenu.xaml
+++ b/TriviaPLay/StartMenu.xaml
@@ -24,6 +24,8 @@
                 HorizontalOptions="Center"
                 VerticalOptions="End"
                 Margin="0,0,0,20"
-                Clicked="StartGameBtn"/>
+                Clicked="Button_Clicked"/>
+
+
     </VerticalStackLayout>
 </ContentPage>
