--- a/TriviaPLay/StartMenu.xaml
+++ b/TriviaPLay/StartMenu.xaml
@@ -11,12 +11,14 @@
                    HorizontalTextAlignment="Center"
                    Title="Select Category"
                    FontSize="20"
+                    SelectedIndexChanged="OnCategoryDiffiucltyChange"
                    Margin="0,0,0,-1"/>
 
         <Picker x:Name="selDifficulty"
             HorizontalTextAlignment="Center"
             Title="Select Difficulty"
             FontSize="20"
+                SelectedIndexChanged="OnCategoryDiffiucltyChange"
             Margin="0,0,0,-1">
             <Picker.ItemsSource>
                 <x:Array Type="{x:Type x:String}">
