Added style option in app.xaml

--- a/TriviaPLay/App.xaml
+++ b/TriviaPLay/App.xaml
@@ -5,6 +5,9 @@
              x:Class="TriviaPLay.App">
     <Application.Resources>
         <ResourceDictionary>
+            <Style TargetType="Button">
+                <Setter Property="BackgroundColor" Value="{DynamicResource ButtonBackgroundColour}"/>
+            </Style>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
