--- a/TriviaPLay/MainPage.xaml
+++ b/TriviaPLay/MainPage.xaml
@@ -2,8 +2,17 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="TriviaPLay.MainPage">
-   
     <StackLayout Padding="20" VerticalOptions="Center">
+
+
+
+        <Image Source="title.png"
+       HorizontalOptions="Center"
+       VerticalOptions="Center"
+       WidthRequest="300"
+       HeightRequest="300"/>
+    
+   
         <Button Text="START"
                 FontSize="24"
                 HorizontalOptions="Center"
